# DAMOCLES

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ACTION_PLAN_OCTOBER_2025.md  CODE_OF_CONDUCT.md  COMING-SOON-README.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPER-INCENTIVES.md  DEVELOPER_SETUP.md  DEVELOPER_TODO_PRODUCTION.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_STATUS_UPDATE.md  DOCKER_SETUP.md  EXECUTIVE_SUMMARY_SEPT_2025.md  FOUNDER_DEPLOYMENT.md  LEGAL-DEFENSE.md  LICENSE  Makefile  OPEN_CORE_ARCHITECTURE.md  PDI_COMPLETE_IMPLEMENTATION.md  PLATFORM_STATUS.md  PLATFORM_STATUS_DECEMBER_2025.md  PLATFORM_STATUS_SEPT_2025.md  POSTGRESQL_MIGRATION_GUIDE.md  PRODUCTION_SECURITY_CHECKLIST.md  PRODUCTION_TASKS_MODULAR.md  PROJECT_STATUS_REPORT.md  QUICK_START.md  README.md  SECURITY-NOTICE.md  SECURITY.md  TECHNICAL_ARCHITECTURE_2025.md  TERMS_OF_SERVICE.md  TOKENOMICS.md  USER_FLOW_TEST_RESULTS.md  VERIFICATION_SUMMARY_2025-09-30.md  VOW.md  (+20 more)
.claude/: settings.local.json
.do/: app.yaml
.github/workflows/: deploy-production.yml  security.yml
addresses/founder/: founder.addr
apps/web/: .env.example  Dockerfile  Dockerfile.prod  Dockerfile.simple  middleware.ts.disabled  next-i18next.config.js  next.config.js  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js
apps/web/app/: dashboard.module.css  globals.css  layout.tsx  page.tsx
apps/web/contexts/: AuthContext.tsx
apps/web/lib/: api-client.ts  api.ts  auth-context.tsx  auth.ts  cardano-client.ts  damocles-api.ts  simple-auth.ts  subscription.ts  use-loading.ts  user-progress.ts
apps/web/pages/: founder.tsx
apps/web/scripts/: lokalise-sync.js
cardano-contracts/: README.md
cardano-contracts/deployed/mainnet/: deployment.json  mint-tx.raw  mint-tx.signed  sword-policy.script
cardano-contracts/deployments/: deploy-testnet.js  mainnet-deployment.js
cardano-contracts/policies/: sword-vesting.hs
cardano-contracts/scripts/: multisig-treasury.json
cardano-contracts/validators/: emergency-pause.hs  treasury-timelock.hs
deploy/: README.md  digitalocean-setup.sh
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_ROADMAP.md  MANIFESTO.md  PDI_SYSTEM_DOCUMENTATION.md  PLATFORM_COMPLETE_FLOW.md  README.md  SACRED_ARCHITECTURE.md  TERMS_OF_SERVICE.md
docs/guides/: USER_ONBOARDING.md
infrastructure/monitoring/: prometheus.yml
keys/founder/: founder.skey  founder.vkey
nginx/: staging.conf
scripts/: backup-database.sh  cardano-cli  deploy-digitalocean.sh  deploy-mainnet-blockfrost.sh  deploy-mainnet-founder.sh  deploy-mainnet-simple.sh  lokalise-sync.js  mock-cardano-cli.sh  restore-database.sh  setup-founder.sh  transfer-sword-simple.sh  transfer-to-yoroi.sh  verify-founder-tokens.py  verify-mainnet-deployment.sh  wait-for-services.sh
services/blockchain-service/: Dockerfile  package.json
services/consciousness-service/: Dockerfile
services/developer-onboarding/: onboarding-bot.ts
services/gdpr-engine/: .env.example  Dockerfile  SENDGRID_SETUP.md  database.py  escalation_scheduler.py  main.py  requirements.txt  test_escalation.py  test_negotiation.py  test_settlement.py
services/learning-engine/: package.json
services/legal-defense/: terms-monitor.ts
services/notification-service/: Dockerfile  package.json  tsconfig.json
services/payment-service/: .env.example  Dockerfile  package.json
services/pdi-engine/: .dockerignore  .env.example  Dockerfile  jest.config.js  package.json
services/settlement-service/: Cargo.toml  Dockerfile
services/settlement-service/src/: main.rs
services/settlement-service/src/models/: mod.rs  settlement.rs
services/social-media-bot/: .env.example  README.md  content_generator.py  data_fetcher.py  main.py  requirements.txt  scheduler.py  social_publisher.py
services/trust-engine/: Dockerfile  package.json  tsconfig.json
services/user-service/: .env.example  Dockerfile  Dockerfile.simple  clear-test-user.js  package.json  seed-test-data.js  tsconfig.json
smart-contracts/: founder-deployment.json
smart-contracts/incentives/: DeveloperIncentives.sol
smart-contracts/plutus/: cabal.project  damocles-contracts.cabal
smart-contracts/plutus/src/Damocles/: Evidence.hs  Founder.hs
smart-contracts/scripts/: deploy-founder-tokens.sh  deploy.sh
smart-contracts/transactions/: genesis-mint.raw
(+209 files in other folders)
