[package]
name = "settlement-service"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "decimal"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.3", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
rand = "0.8"

# AI/ML integration
candle-core = "0.3"
candle-nn = "0.3"

# Blockchain integration
cardano-serialization-lib = "11.0"

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp"] }

[dev-dependencies]
tokio-test = "0.4"